# test-autoresearch-frameworks

./: .gitignore  README.md  pyproject.toml
configs/: example.yaml
notebooks/: debug_components.ipynb
src/autoresearch_bench/: __init__.py  __main__.py  code_utils.py  config.py  results.py  runner.py
src/autoresearch_bench/llm/: __init__.py  client.py  models.py
src/autoresearch_bench/prompts/: __init__.py  builder.py
src/autoresearch_bench/samplers/: __init__.py  base.py  iterative_sampler.py  random_sampler.py
tests/: conftest.py  test_code_utils.py  test_config.py  test_iterative_sampler.py  test_llm_client.py  test_models.py  test_prompt_builder.py  test_random_sampler.py  test_results.py  test_runner.py
